feat: add subscription categories
