# apps/server/src/app.module.ts
@@ -1,6 +1,7 @@
 import { Module } from '@nestjs/common';
 import { ConfigModule } from '@nestjs/config';
 
+import { CategoriesModule } from './categories/categories.module';
 import { validateEnvironment } from './config/env';
 import { PrismaModule } from './database/prisma.module';
 import { HealthModule } from './health/health.module';
@@ -18,6 +19,7 @@ import { UsersModule } from './users/users.module';
     PrismaModule,
     UsersModule,
     HealthModule,
+    CategoriesModule,
     PaymentMethodsModule,
     SubscriptionsModule,
   ],
